--- a/springdb/frontend/public/index.html
+++ b/springdb/frontend/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/logov2-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/logov2-16x16.png">
 
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -19,11 +19,11 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <title>Minimal UI Kit</title>
+  <title>Gradvek</title>
   <meta name="description"
-    content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
+    content="Made with Minimal UI Kit, built on the newest version of Material-UI ©" />
   <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-  <meta name="author" content="Minimal UI Kit" />
+  <meta name="author" content="Semis" />
 </head>
 
 <body>
